# ue4pak-rs

./: .editorconfig  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml  rustdoc.yml
examples/: list.rs  print.rs
src/: archive.rs  lib.rs  pakbuilder.rs  pakentry.rs  pakfile.rs  pakindex.rs  pakindexv1.rs  pakindexv2.rs  pakinfo.rs
src/ue4pak/: archive.rs.html  lib.rs.html  pakbuilder.rs.html  pakentry.rs.html  pakfile.rs.html  pakindex.rs.html  pakindexv1.rs.html  pakindexv2.rs.html  pakinfo.rs.html
tests/: v7.pakinfo
ue4pak/: all.html  enum.PakEntryLocation.html  enum.PakIndex.html  enum.PakVersion.html  index.html  sidebar-items.js  struct.AssetWriter.html  struct.PakCompressedBlock.html  struct.PakEntry.html  struct.PakFile.html  struct.PakFileBuilder.html  struct.PakIndexV1.html  struct.PakIndexV2.html  struct.PakInfo.html
ue4pak/archive/: index.html  sidebar-items.js  struct.ArchiveLen.html  struct.ArchiveReader.html  struct.ArchiveWriter.html  trait.Archivable.html  trait.ArchivableWith.html  trait.Archive.html
ue4pak/constant/: constant.COMPRESSION_METHOD_NAME_LEN.html  constant.COMPRESS_BIAS_MEMORY.html  constant.COMPRESS_BIAS_SPEED.html  constant.COMPRESS_CUSTOM.html  constant.COMPRESS_DEPRECATED_FORMAT_FLAGS_MASK.html  constant.COMPRESS_GZIP.html  constant.COMPRESS_NONE.html  constant.COMPRESS_NO_FLAGS.html  constant.COMPRESS_OPTIONS_FLAGS_MASK.html  constant.COMPRESS_SOURCE_IS_PADDED.html  constant.COMPRESS_ZLIB.html  constant.MAX_CHUNK_DATA_SIZE.html  (+4 more)
(+49 files in other folders)
