[package]
name = "ue4pak"
version = "0.1.0"
authors = ["Vincent Rouillé <vincent@speedy37.fr>"]
repository = "https://github.com/Speedy37/ue4pak-rs"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["ue4", "pak", "encoder", "decoder"]
description = "Unreal Engine 4 .pak file encoder/decoder"

[dependencies]
aes = "0.7.1"
base64 = "0.20"
block-modes = "0.8.1"
sha-1 = "0.9"
log = "0.4"
